--- a/app/assets/javascripts/app.js.tt
+++ b/app/assets/javascripts/app.js.tt
@@ -1,4 +1,4 @@
-angular.module('<%= app_const_base.camelize(false) %>', [])
+angular.module('<%= camelized %>', [])
 .controller('MainCtrl', ['$scope', function($scope) {
   $scope.test = 'Hello, world!';
 }]);
