--- a/app/views/layouts/application.html.erb.tt
+++ b/app/views/layouts/application.html.erb.tt
@@ -12,9 +12,16 @@
     <title><%= camelized %></title>
   </head>
 
-  <body ng-app='app' ng-controller='AppController as vm'>
-    <div>
-      {{vm.sayHello()}}
-    </div>
+  <body ng-app='app'>
+    <header>
+      <h1>Angular and Rails</h1>
+      <nav>
+        <button ui-sref="main.login">Login View</button>
+        <button ui-sref="main.draw">Profile View</button>
+      </nav>
+    </header>
+
+    <ui-view></ui-view>
+
   </body>
 </html>
