Added angular-rails-templates gem to template.rb
Closes #2
Closes #3

--- a/app/views/layouts/application.html.erb.tt
+++ b/app/views/layouts/application.html.erb.tt
@@ -17,7 +17,7 @@
       <h1>Angular and Rails</h1>
       <nav>
         <button ui-sref="main.login">Login View</button>
-        <button ui-sref="main.draw">Profile View</button>
+        <button ui-sref="main.profile">Profile View</button>
       </nav>
     </header>
 
